<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp" android:background="@color/clr_gray_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@android:color/white"
        android:id="@+id/rlHistoryInfo">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgStat"
            android:layout_centerVertical="true"
            android:src="@drawable/work_done"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblMoney"
            android:text="@string/jobhistory_amount"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ftsize_3"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/lblMoney"
            android:layout_toRightOf="@+id/imgStat"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblDate"
                android:text="@string/jobhistory_yearmonthday"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ftsize_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblWorkplace"
                android:layout_below="@+id/lblDate"
                android:layout_marginTop="5dp"
                android:text="@string/jobnotification_normalworker"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ftsize_1"/>

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnStat"
        android:text="@string/jobhistory_payplan"
        android:background="@color/clr_red_dark"
        android:textColor="@android:color/white"
        android:textSize="@dimen/ftsize_1"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rlHistoryInfo" />

</RelativeLayout>