<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_delete"
            android:id="@+id/lblMessage"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ftsize_1"
            android:padding="30dp"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlButtons"
            android:orientation="horizontal"
            android:layout_below="@+id/lblMessage">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jobnotification_popup_yes"
                android:id="@+id/btnYes"
                android:background="@color/clr_blue_light"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ftsize_1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jobnotification_popup_no"
                android:id="@+id/btnNo"
                android:layout_toRightOf="@+id/btnYes"
                android:background="#96a6b7"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ftsize_1" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>